--- a/todoreact/src/pages/Login/index.css
+++ b/todoreact/src/pages/Login/index.css
@@ -1,5 +1,5 @@
 .bg__login {
-  background: url("../../assets/cover.png");
+  background: url("../../assets/huellas.jpeg");
   height: 100vh;
   background-size: cover;
   background-position: center;
